--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "browser-sync --files *.html,css/*.css,js/*.js",
+    "start:app": "browser-sync --files *.html,css/*.css,js/*.js",
+    "start:db": "json-server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
