--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:app": "browser-sync --files *.html,css/*.css,js/*.js",
-    "start:db": "json-server",
+    "start:db": "json-server -w db.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
